--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -19,8 +19,8 @@
       </p>
   
       <p class="mb-4 flex items-center">
-        <label for="id_address" class="label text-gray-700 text-sm font-medium mr-2">Address:</label>
-        <input class="input w-full p-2 text-black rounded-lg" type="text" name="address" id="id_address" required />
+        <label for="id_house_number" class="label text-gray-700 text-sm font-medium mr-2">House Number:</label>
+        <input class="input w-full p-2 text-black rounded-lg" type="text" name="house_number" id="id_house_number" required />
       </p>
     </fieldset>
 
