--- a/templates/report.html
+++ b/templates/report.html
@@ -67,7 +67,7 @@
 <div class="container">
     <div class="header-container">
         <div>
-            <img src="./static/Ghana_Police.jpg" alt="Ghana Police Logo" class="header-logo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAcC29vKyGxYZ4h-MlokuK3kRG0xFll6sP6JNjzywSUQ&s" alt="Ghana Police Logo" class="header-logo">
         </div>
         <div>
             <h1 class="header-title">Ghana Police Service</h1>
